--- a/camino/camino/Views/Home/Index.cshtml
+++ b/camino/camino/Views/Home/Index.cshtml
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="~/Styles/homeStyle.css" rel="stylesheet" />
-
+    <script type="text/javascript" src="https://platform-api.sharethis.com/js/sharethis.js#property=6391649bb92caa0012f80ccc&product=inline-share-buttons&source=platform" async="async"></script>
     <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
 
 </head>
@@ -83,6 +83,7 @@
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore.</p>
             </div>
         </div>
+        
     </div>
 
     <!--Sitios de interes-->
@@ -114,7 +115,7 @@
 
 
     <!-- Footer -->
-    <footer  style="background:#362706" class="w3-center w3-padding-64 w3-opacity w3-hover-opacity-off" >
+    <footer style="background:#362706" class="w3-center w3-padding-64 w3-opacity w3-hover-opacity-off">
         <a href="~/Home/Index" class="w3-button w3-light-grey"><i class="fa fa-arrow-up w3-margin-right"></i>To the top</a>
         <div class="w3-xlarge w3-section">
             <a href="https://www.facebook.com/ElCaminoDeCostaRica"><i class="fab fa-facebook-square w3-hover-opacity" style="color:white"></i></a>
@@ -124,6 +125,7 @@
             <i class="fab fa-twitter-square w3-hover-opacity" style="color:white"></i>
             <i class="fab fa-linkedin w3-hover-opacity" style="color:white"></i>
         </div>
+        <div class="sharethis-inline-share-buttons"></div>
     </footer>
 
 
